--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>Broadway Design</title>
   </head>
   <body>
-    
+	  <h1>Broadway Design</h1>
+	  <nav><ul>
+		<a href ="#contact"><li>Home</li></a>
+		<a href ="#contact"><li>Process</li></a>
+		<a href ="#contact#"><li>Work</li></a>
+		<a href ="#contact#"><li>Team</li></a>
+		<a href ="#contact#"><li>Contact</li></a>
+	  </ul></nav>
   </body>
 </html>
